Final fixes | 30-08-2026 | 14:46