@@ -25,34 +25,51 @@ The server provides the following functionality:
 
 ### Client
 
-The client provides a JavaFX graphical user interface that allows users to:
+The client provides a modern and intuitive JavaFX graphical user interface with the following features:
 
-- Select an image from their computer.
-- Upload an image to the server.
-- Request and view a list of available images.
-- Enter an image ID.
-- Retrieve the corresponding image from the server.
-- Display the retrieved image within the application.
+- **Connection Management** — Easily connect to or disconnect from the server with visual status indicators.
+- **Status Display** — Real-time connection status (Disconnected/Connected/Failed) with color-coded feedback.
+- **Image Upload** — Select and upload images from your computer to the server.
+- **Image Browsing** — Request and view a list of available images on the server.
+- **Image Retrieval** — Enter an image ID to download the corresponding image from the server.
+- **Image Display** — View downloaded images directly within the application with smooth scrolling and scaling.
+- **Server Feedback** — Dedicated response area showing real-time feedback from the server operations.
+
+### User Interface Enhancements
+
+The client features a professionally designed interface with:
+
+- **Dark Header Bar** — Connection controls with connect/disconnect buttons and status indicator
+- **Organized Panels** — Logically grouped sections for image listing, download controls, and server responses
+- **Color-Coded Status** — Visual feedback (orange for disconnected, green for connected, red for failed)
+- **Responsive Design** — Automatically adjusts layout to accommodate images and server responses
+- **Error Handling** — Clear error messages and user guidance for failed operations
 
 ## Project Structure
 
 ```text
 LunarLink/
 ├── bin/
-│   └── # Compiled application files
+│   ├── client/          # Compiled client classes
+│   └── server/          # Compiled server classes
 │
 ├── docs/
-│   ├── compile.bat
-│   └── # Additional documentation
+│   ├── 1-cleanBin.bat   # Clean build artifacts
+│   ├── 2-buildServer.bat # Compile server
+│   └── 3-buildClient.bat # Compile client
 │
 ├── src/
-│   └── # Java source code
+│   ├── client/
+│   │   ├── ImgClient.java       # Application entry point
+│   │   └── ImgClientPane.java   # JavaFX UI and client logic
+│   └── server/
+│       ├── ImgServer.java       # Server entry point
+│       └── ImgHandler.java      # Client request handler
 │
 ├── data/
-│   └── # Test image data
-│
-├── lib/
-│   └── # Required external libraries
+│   ├── client/  # Downloaded images stored here
+│   └── server/
+│       └── ImgList.txt # Image catalogue
 │
 └── README.md
 ```
@@ -117,27 +134,42 @@ To compile and run the application, you will need:
 - JavaFX
 - A Java compiler
 - Windows Command Prompt or another compatible terminal
-- The required JavaFX/library files configured for the project
-
-## Running the Application
-
-### 1. Compile
-
-Use the supplied batch file to compile the project:
+- The required JavaFX/libras to compile the project:
 
 ```text
-docs/compile.bat
+docs/1-cleanBin.bat     # Clean previous build artifacts
+docs/2-buildServer.bat  # Compile server components
+docs/3-buildClient.bat  # Compile client components
 ```
 
-The compilation process should place compiled classes in the `bin` directory.
+The compilation process places compiled classes in the `bin` directory.
 
 ### 2. Start the Server
 
-Start the server application first so that it can listen for incoming client connections on port `5432`.
+Start the server application first so that it can listen for incoming client connections on port `5432`:
+
+```text
+java -cp bin/server server.ImgServer
+```
+
+You should see output indicating the server is running and waiting for connections.
 
 ### 3. Start the Client
 
-Once the server is running, launch the client application. The JavaFX interface can then be used to:
+Once the server is running, launch the client application in a separate terminal:
+
+```text
+java -cp bin/client --module-path <path-to-javafx> --add-modules javafx.controls,javafx.fxml client.ImgClient
+```
+
+The JavaFX interface can then be used to:
+
+1. Click **Connect** to establish a connection to the server.
+2. Click **Show Downloadable Images** to view the available images.
+3. Enter an image ID and click **Download Image** to retrieve it from the server.
+4. Click **Display Downloaded Image** to view the image within the application.
+5. Click **Upload Image** to add new images to the server.
+6. Click **Disconnect** when finishednt application. The JavaFX interface can then be used to:
 
 1. Connect to the server.
 2. View the available images.
@@ -197,6 +229,26 @@ FAILURE
 ## Purpose
 
 LunarLink demonstrates the implementation of a networked Java application in which a graphical client communicates with a server to transfer and manage binary image data.
+
+## Recent Improvements
+
+### Bug Fixes
+
+- **Fixed File Path Issue** — Corrected path in `ImgHandler.loadImgList()` from `.data/` to `data/`
+- **Fixed Download Command Parsing** — Added space between "DOWN" command and file ID in client
+- **Fixed File Path Separator** — Corrected download file path from `data/client` to `data/client/`
+- **Fixed Download Loop Logic** — Moved file operations outside the loop to prevent file overwriting
+- **Added Null Checks** — Added validation for file chooser cancellation in upload handler
+
+### UI/UX Enhancements
+
+- **Disconnect Button** — Allows users to cleanly disconnect from the server
+- **Status Indicator** — Real-time visual feedback of connection status (color-coded)
+- **Modern Layout** — Reorganized with BorderPane for better structure and organization
+- **Enhanced Image Display** — Images now display in a dedicated panel with scrolling and proper sizing
+- **Better Error Messages** — User-friendly feedback for all operations
+- **Professional Styling** — Improved colors, spacing, padding, and visual hierarchy
+- **Larger Window** — Increased to 950x850 to accommodate all features comfortably
 
 The project combines:
 
